monitoring/ingress/prometheus-server-ingress.yaml
api_version: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"prometheus-server-ingress","namespace":"monitoring"},"spec":{"rules":[{"host":"prometheus.example.com","http":{"paths":[{"backend":{"service":{"name":"prometheus-server","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["prometheus.example.com"],"secretName":"prometheus-tls-cert" [...]

      '
    nginx.ingress.kubernetes.io/rewrite-target: /
  creation_timestamp: '2024-11-29T07:31:39+00:00'
  deletion_grace_period_seconds: null
  deletion_timestamp: null
  finalizers: null
  generate_name: null
  generation: 1
  labels: null
  managed_fields:
  - api_version: networking.k8s.io/v1
    fields_type: FieldsV1
    fields_v1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:nginx.ingress.kubernetes.io/rewrite-target: {}
      f:spec:
        f:rules: {}
        f:tls: {}
    manager: kubectl-client-side-apply
    operation: Update
    subresource: null
    time: '2024-11-29T07:31:39+00:00'
  name: prometheus-server-ingress
  namespace: monitoring
  owner_references: null
  resource_version: '939796'
  self_link: null
  uid: 3316716d-eeae-401a-b438-43b360b4038f
spec:
  default_backend: null
  ingress_class_name: null
  rules:
  - host: prometheus.example.com
    http:
      paths:
      - backend:
          resource: null
          service:
            name: prometheus-server
            port:
              name: null
              number: 80
        path: /
        path_type: Prefix
  tls:
  - hosts:
    - prometheus.example.com
    secret_name: prometheus-tls-cert
status:
  load_balancer:
    ingress: null
